--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
